--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -25,8 +25,8 @@ jobs:
           
       - name: Commit changes
         run: |
-          git config --local user.email "mazipanneh@gmail.com"
-          git config --local user.name "mazipan"
+          git config --local user.email "cas8398@gmail.com"
+          git config --local user.name "cas8398"
           git add -A
           
           arr[0]="feat: 😂 auto commit"
